# myLittleScheme

./: .gitignore~  README.md  main.hs  myLittleScheme.cabal
.stack-work/install/793afecd/flag-cache/: myLittleScheme-0.1.0.0-73f94127feb7af4704ba9f8412c5f1e0  parsec-3.1.11-c2bd31daa5db33c2ea3632acaa426a86  text-1.2.2.1-b57d96a00906e0e10adf5a45009f1463
.stack-work/install/793afecd/lib/x86_64-windows-ghc-7.10.3/myLittleScheme-0.1.0.0-8lt1zfVAKlEI4b8dnGRllA/: Lib.hi
.stack-work/install/793afecd/pkgdb/: myLittleScheme-0.1.0.0-73f94127feb7af4704ba9f8412c5f1e0.conf  package.cache
.stack-work/install/x86_64-osx/lts-6.5/7.10.3/doc/myLittleScheme-0.1.0.0/: LICENSE
.stack-work/install/x86_64-osx/lts-6.5/7.10.3/flag-cache/: myLittleScheme-0.1.0.0-cbad85b193d1c6747a0de34b63d70f4f  parsec-3.1.11-20844b7a9bc1041a4ddd782de1f5a8be  text-1.2.2.1-3d0a931105ed331bf2fb8b46dcae08ba
.stack-work/install/x86_64-osx/lts-6.5/7.10.3/lib/x86_64-osx-ghc-7.10.3/myLittleScheme-0.1.0.0-EQeDMR3H1XDGpIrUqj8KmJ/: Lib.dyn_hi  Lib.hi  libHSmyLittleScheme-0.1.0.0-EQeDMR3H1XDGpIrUqj8KmJ-ghc7.10.3.dylib
.stack-work/install/x86_64-osx/lts-6.5/7.10.3/pkgdb/: myLittleScheme-0.1.0.0-cbad85b193d1c6747a0de34b63d70f4f.conf  package.cache
firstSteps/: firstSteps_1.hi  firstSteps_1.hs  firstSteps_2.hs
simpleParser/: simpleParser  simpleParser.hi  simpleParser.hs
src/: main.hs
src/evaluator/: .#Evaluator.hs  .#eval.hs  Evaluator.hs  log.txt
src/firstSteps/: firstSteps_2.hi  firstSteps_3.hi  firstSteps_3.hs
src/repl/: .#repl.hs  repl.hs
src/simpleParser/: simpleParser.hi  simpleParser.hs
