name:                myLittleScheme
version:             0.1.0.0
synopsis:            a Scheme written in haskell for education
description:         see README.md
homepage:            https://github.com/doyougnu/myLittleScheme#readme
license:             wtfpl
license-file:        LICENSE
author:              doyougnu
maintainer:          jmy6342@gmail.com
copyright:           2016 J.M. Young
category:            toy
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       array
                     , base >= 4.7 && < 5
                     , parsec
                     , text

  default-language:    Haskell2010

executable myLittleScheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , myLittleScheme
  default-language:    Haskell2010

test-suite myLittleScheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , myLittleScheme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/doyougnu/myLittleScheme
